--- a/style/a1.css
+++ b/style/a1.css
@@ -9,6 +9,11 @@
   font-style: normal;
 }
 
+.inter-font {
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
 .header {
   width: 100%;
   height: 698px;
@@ -17,7 +22,7 @@
 }
 
 main {
-  margin: 0 auto;
+  margin: 0 auto 130px;
   max-width: 1140px;
 }
 nav {
@@ -29,7 +34,7 @@ nav {
 
 .logo {
   font-size: 34px;
-  font-weight: 600;
+  font-weight: 900;
   color: #4e47ff;
 }
 .btn-primary {
@@ -92,4 +97,26 @@ nav {
   font-size: 24px;
   color: rgba(37, 36, 50, 0.5);
   margin-bottom: 23px;
+}
+
+.user-container {
+  text-align: center;
+  background-color: rgba(78, 71, 255, 0.1);
+  padding: 50px 80px;
+  border-radius: 24px;
+}
+.user-body {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+.user-title {
+  color: #4e47ff;
+  font-size: 80px;
+  font-weight: bold;
+}
+
+.user-desc {
+  font-size: 20px;
+  color: rgba(0, 0, 0, 0.5);
 }
