--- a/style/a1.css
+++ b/style/a1.css
@@ -196,10 +196,13 @@ nav {
   align-items: center;
   text-align: left;
   gap: 100px;
+  max-width: 1140px;
+  margin: 0 auto;
 }
 
 .contact-1 {
   width: 50%;
+  max-width: 500px;
   text-align: center;
 }
 label {
@@ -213,15 +216,44 @@ textarea {
   resize: none;
   overflow: auto;
 }
-input[type="text"],
-input[type="email"],
-textarea {
+.contact-container [type="text"],
+.contact-container input[type="email"],
+.contact-container textarea {
   height: 64px;
   border-radius: 10px;
   background-color: white;
-  display: inline-block;
+  display: block;
   width: 100%;
   padding: 20px 32px;
   margin-bottom: 24px;
   border: none;
+}
+.footer {
+  gap: 20px;
+  text-align: center;
+  background-color: white;
+  padding: 100px 450px;
+  align-items: center;
+}
+footer h1 {
+  font-size: 100px;
+  font-weight: 1000;
+  color: #4e47ff;
+  margin-bottom: 8px;
+}
+footer p {
+  color: #8987a1;
+}
+footer ul {
+  display: flex;
+  gap: 48px;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+footer ul li {
+  list-style: none;
+}
+footer li a {
+  text-decoration: none;
+  color: #8987a1;
 }
